Routes setup with BrowserRouter

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>React | Contact App</title>
   </head>
   <body>
-    <h1>React RTK - Contact App</h1>
+    <div id="root"></div>
   </body>
 </html>
